--- a/template/package.json
+++ b/template/package.json
@@ -1,8 +1,5 @@
 {
   "name": "{{ name }}",
-  {{#private}}
-  "private": true,
-  {{/private}}
   "description": "{{ description }}",
   "author": "{{ author }}",
   "version": "0.0.1",
@@ -13,18 +10,13 @@
   "main": "server/index.js",
   "dependencies": {
     "babel": "^5.2.17",
-    "co-views": "^0.3.0",
+    "co-fs": "^1.2.0",
     "duo": "^0.11.4",
     "duo-babel": "^5.4.0",
     "duo-myth": "^0.1.0",
     "koa": "^0.20.0",
     "koa-body-parser": "^1.1.2",
     "koa-logger": "^1.2.2",
-    "koa-send": "^1.3.1",
-    "swig": "^1.4.2"
-  },
-  "devDependencies": {
-    "jscs": "1.12.0",
-    "mocha": "2.x"
+    "koa-send": "^1.3.1"
   }
 }
