--- a/template/package.json
+++ b/template/package.json
@@ -10,13 +10,17 @@
   "main": "server/index.js",
   "dependencies": {
     "babel": "^5.2.17",
+    "babelify": "^6.1.0",
+    "browserify": "^10.1.3",
     "co-fs": "^1.2.0",
+    "deku": "^0.2.17",
     "duo": "^0.11.4",
     "duo-babel": "^5.4.0",
     "duo-myth": "^0.1.0",
     "koa": "^0.20.0",
     "koa-body-parser": "^1.1.2",
     "koa-logger": "^1.2.2",
-    "koa-send": "^1.3.1"
+    "koa-send": "^1.3.1",
+    "page": "^1.6.3"
   }
 }
