--- a/template/package.json
+++ b/template/package.json
@@ -12,13 +12,14 @@
     "babel": "^5.2.17",
     "babelify": "^6.1.0",
     "browserify": "^10.1.3",
-    "cssify": "^0.7.0",
-    "co-fs": "^1.2.0",
     "deku": "^0.2.17",
+    "duo": "^0.11.4",
+    "duo-myth": "^0.1.0",
     "koa": "^0.20.0",
     "koa-body-parser": "^1.1.2",
     "koa-logger": "^1.2.2",
     "koa-send": "^1.3.1",
-    "page": "^1.6.3"
+    "page": "^1.6.3",
+    "watchify": "^3.2.1"
   }
 }
