--- a/template/Makefile
+++ b/template/Makefile
@@ -12,7 +12,7 @@ DUO := $(BIN)/duo
 #
 
 build: node_modules
-	@$(BROWSERIFY) -t cssify -t babelify client/index.js > build.js
+	@$(BROWSERIFY) -t babelify client/index.js > build.js
 	@$(DUO) client/index.css --stdout --quiet --use duo-myth > build.css
 
 #
